--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="stats">
       <p>👥 Total : <span id="total">0</span> • 🧫 Chimie : <span id="chimie">0</span> • 🤖 Robotique : <span id="robotique">0</span> • ⚡ Électricité : <span id="électricité">0</span></p>
     </section>
-    <section id="peopleList"></section>
+    <section id="scienceList"></section>
     <script src="app.js"></script>
   </body>
 </html>
