--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
     <h1>🧪 Atelier Science</h1>
     <section id="formSection">
       <h2>Ajouter un participant</h2>
-      <input type="text" id="personName" placeholder="Nom">
-      <select id="personRole">
-        <option>Chimie</option>
-        <option>Robotique</option>
-        <option>Électricité</option>
-      </select>
-      <button onclick="addPerson()">Ajouter ✏️</button>
+      <form id="science-form">
+        <input type="text" id="snack-name" placeholder="Nom">
+        <select id="snack-role">
+          <option>Chimie</option>
+          <option>Robotique</option>
+          <option>Électricité</option>
+        </select>
+        <button type="submit">Ajouter ✏️</button>
+      </form>
     </section>
     <section id="stats">
       <p>👥 Total : <span id="total">0</span> • 🧫 Chimie : <span id="chimie">0</span> • 🤖 Robotique : <span id="robotique">0</span> • ⚡ Électricité : <span id="électricité">0</span></p>
