--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
     <link rel="apple-touch-startup-image" href="assets/apple-splash-640-1136.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
     <link rel="apple-touch-startup-image" href="assets/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
   </head>
-  <script src="app.js"></script>
   <body>
     <h1>🧪 Atelier Science</h1>
     <section id="formSection">
@@ -63,6 +62,10 @@
       </form>
     </section>
     <ul id="scienceList"></ul>
+
+    <button onclick="testBackgroundSync()">Tester Background Sync</button>
+  <!-- TON CODE APP -->
+    <script type="module" src="app.js"></script>
     <!--<section id="stats">
       <p>👥 Total : <span id="total">0</span> • 🧫 Chimie : <span id="chimie">0</span> • 🤖 Robotique : <span id="robotique">0</span> • ⚡ Électricité : <span id="électricité">0</span></p>
     </section>
